Bug 124981 - Some (WKWebView?) object is leaked in the iOS app
Summary: Some (WKWebView?) object is leaked in the iOS app
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-26 12:10 UTC by How can I remove my account?
Modified: 2019-04-26 15:09 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot of Safari's Develop menu showing the multiple "Online Editor" instances (827.07 KB, image/png)
2019-04-26 12:16 UTC, How can I remove my account?
Details

Note You need to log in before you can comment on or make changes to this bug.
Description How can I remove my account? 2019-04-26 12:10:56 UTC
Description:
If you open a document, close it, open another one, close it, and then open a third one (can be the same document three times of course), and then connect to the device from Safari on macOS using the "Develop" menu, you will notice that there are three instances of "Online Editor" (the title of the app's WebKit view) that you can connect to. This is a sign that something is not deallocated properly. Presumably the WKWebView object.

This doesn't as such seem to cause any misbehaviour of the app but is of course something that should be fixed eventually. 

Steps to Reproduce:
.

Actual Results:
.

Expected Results:
.


Reproducible: Always


User Profile Reset: No



Additional Info:
.
Comment 1 How can I remove my account? 2019-04-26 12:16:18 UTC
Created attachment 151024 [details]
Screenshot of Safari's Develop menu showing the multiple "Online Editor" instances
Comment 2 Commit Notification 2019-04-26 15:05:17 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/online/+/f21665f2ac2514e2aab49785f09805c4f7dcca19%5E%21

tdf#124981: Fix a few object leaks
Comment 3 How can I remove my account? 2019-04-26 15:09:41 UTC
After the above (present also in the collabora-online-4 branch from which the iOS app is built for the customer), the leftover entries in the Develop menu are gone. Also, some object leaks I noticed when profiling allocations in Instruments are now gone. Marking as resolved for now, will reopen if/when I notice some specific other leaks.